<?xml version="1.0"?>
<package format="2">
  <name>event_camera_emulation</name>
  <version>0.1.1</version>
  <description>The event_camera_emulation package</description>

  <maintainer email="ahmed.abdelrahman@outlook.de">Ahmed Faisal Abdelrahman</maintainer>

  <license>MIT</license>

  <author email="ahmed.abdelrahman@outlook.de">Ahmed Faisal Abdelrahman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
